day-one/step-02/hello-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80 # entry service port
      targetPort: 3000 # entry pod port
