day-one/step-02/hello-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hello.lilian-andres.cpe.takima.school
      http:
        paths:
          - backend:
              service:
                name: hello-service # link with service is made by its name
                port:
                  number: 80 # entry service port
            path: /
            pathType: Prefix
